Bug 225933 - Read-only sysctl variable "kern.ipc.shmsegs" does not return number of segments
Summary: Read-only sysctl variable "kern.ipc.shmsegs" does not return number of segments
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 11.1-RELEASE
Hardware: Any Any
: --- Affects Many People
Assignee: Brooks Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-15 20:49 UTC by Stefan B.
Modified: 2018-02-21 18:33 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan B. 2018-02-15 20:49:57 UTC
PROBLEM:

# sysctl -d kern.ipc.shmsegs
kern.ipc.shmsegs: Current number of shared memory segments allocated
# sysctl -Ah kern.ipc.shmsegs

EXPECTED RESULT:
numeric output

ACTUAL RESULT:
garbage output
Comment 1 Brooks Davis freebsd_committer freebsd_triage 2018-02-15 22:15:09 UTC
It looks like this description has been wrong since it was added in 2005. :(

I've added a possible rewording in https://reviews.freebsd.org/D14391
Comment 2 commit-hook freebsd_committer freebsd_triage 2018-02-18 19:19:55 UTC
A commit references this bug:

Author: brooks
Date: Sun Feb 18 19:19:36 UTC 2018
New revision: 329525
URL: https://svnweb.freebsd.org/changeset/base/329525

Log:
  Correct/improve the descriptions if kern.ipc.(shmsegs,sema,msqids).

  The description of kern.ipc.shmsegs was wrong since 2005.  I updated the
  others (which were more correct) to match.

  PR:		225933
  Reviewed by:	cem
  MFC after:	3 days
  Sponsored by:	DARPA, AFRL
  Differential Revision:	https://reviews.freebsd.org/D14391

Changes:
  head/sys/kern/sysv_msg.c
  head/sys/kern/sysv_sem.c
  head/sys/kern/sysv_shm.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2018-02-21 18:31:34 UTC
A commit references this bug:

Author: brooks
Date: Wed Feb 21 18:31:21 UTC 2018
New revision: 329739
URL: https://svnweb.freebsd.org/changeset/base/329739

Log:
  MFC r329525:

  Correct/improve the descriptions if kern.ipc.(shmsegs,sema,msqids).

  The description of kern.ipc.shmsegs was wrong since 2005.  I updated the
  others (which were more correct) to match.

  PR:		225933
  Reviewed by:	cem
  Sponsored by:	DARPA, AFRL
  Differential Revision:	https://reviews.freebsd.org/D14391

Changes:
_U  stable/11/
  stable/11/sys/kern/sysv_msg.c
  stable/11/sys/kern/sysv_sem.c
  stable/11/sys/kern/sysv_shm.c
Comment 4 commit-hook freebsd_committer freebsd_triage 2018-02-21 18:33:38 UTC
A commit references this bug:

Author: brooks
Date: Wed Feb 21 18:32:58 UTC 2018
New revision: 329741
URL: https://svnweb.freebsd.org/changeset/base/329741

Log:
  MFC r329525:

  Correct/improve the descriptions if kern.ipc.(shmsegs,sema,msqids).

  The description of kern.ipc.shmsegs was wrong since 2005.  I updated the
  others (which were more correct) to match.

  PR:		225933
  Reviewed by:	cem
  Sponsored by:	DARPA, AFRL
  Differential Revision:	https://reviews.freebsd.org/D14391

Changes:
_U  stable/10/
  stable/10/sys/kern/sysv_msg.c
  stable/10/sys/kern/sysv_sem.c
  stable/10/sys/kern/sysv_shm.c