Correct/improve the descriptions if kern.ipc.(shmsegs,sema,msqids).

The description of kern.ipc.shmsegs was wrong since 2005.  I updated the
others (which were more correct) to match.

PR:		225933
Reviewed by:	cem
MFC after:	3 days
Sponsored by:	DARPA, AFRL
Differential Revision:	https://reviews.freebsd.org/D14391


git-svn-id: svn+ssh://svn.freebsd.org/base/head@329525 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f