sys/kern/sysv_msg.c
@@ -1494,7 +1494,8 @@ SYSCTL_INT(_kern_ipc, OID_AUTO, msgseg, CTLFLAG_RDTUN, &msginfo.msgseg, 0,
     "Number of message segments");
 SYSCTL_PROC(_kern_ipc, OID_AUTO, msqids,
     CTLTYPE_OPAQUE | CTLFLAG_RD | CTLFLAG_MPSAFE,
-    NULL, 0, sysctl_msqids, "", "Message queue IDs");
+    NULL, 0, sysctl_msqids, "",
+    "Array of struct msqid_kernel for each potential message queue");
 
 static int
 msg_prison_check(void *obj, void *data)
